force-app/main/default/objects/Campaign/fields/Actual_Attended__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attended__c</fullName>
    <description>Number of people who actual showed</description>
    <label>Actual Attended</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>