force-app/main/default/objects/Campaign/fields/Ad_Cost__c.field-meta.xml
<CustomField>
    <fullName>Ad_Cost__c</fullName>
    <label>Ad Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>