force-app/main/default/objects/Campaign/fields/Ad_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Ad_Recieved__c</fullName>
    <description>Date when ad was recieved and logged as reveived.</description>
    <label>Ad Recieved</label>
    <type>Date</type>
</CustomField>