force-app/main/default/objects/Campaign/fields/Ad_Size__c.field-meta.xml
<CustomField>
    <fullName>Ad_Size__c</fullName>
    <description>What size advertizement will they do in the Symposium program.</description>
    <label>Ad Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Black/White</fullName>
            </value>
            <value>
                <fullName>1/2  Black/White</fullName>
            </value>
            <value>
                <fullName>1/4  Back/White</fullName>
            </value>
            <value>
                <fullName>Full Color</fullName>
            </value>
            <value>
                <fullName>1/2 Color</fullName>
            </value>
            <value>
                <fullName>1/4 Color</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>