force-app/main/default/objects/Campaign/fields/Ad_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Ad_Specifications__c</fullName>
    <label>Ad Specifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>