force-app/main/default/objects/Campaign/fields/Additional_Registration_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additional_Registration_Cost__c</fullName>
    <label>Additional Registration Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>