force-app/main/default/objects/Campaign/fields/ASA_Associate__c.field-meta.xml
<CustomField>
    <fullName>ASA_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ASA Salesforce USER</description>
    <label>ASA Associate</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This user is not active.  Please select another associate.</errorMessage>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>R00N30000001GMYpEAO</relationshipName>
    <type>Lookup</type>
</CustomField>