force-app/main/default/objects/Campaign/fields/ASA_Attending__c.field-meta.xml
<CustomField>
    <fullName>ASA_Attending__c</fullName>
    <inlineHelpText>Enter the name(s) of other ASA staff attending which are not listed as a Salesforce user.</inlineHelpText>
    <label>ASA - Attending</label>
    <type>TextArea</type>
</CustomField>