force-app/main/default/objects/Campaign/fields/ASA_Customer__c.field-meta.xml
<CustomField>
    <fullName>ASA_Customer__c</fullName>
    <description>What division or Team at ASA is marketing running this &quot;Campaign&quot;</description>
    <label>ASA Customer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Lender Services</fullName>
            </value>
            <value>
                <fullName>School Management</fullName>
            </value>
            <value>
                <fullName>L&amp;S</fullName>
            </value>
            <value>
                <fullName>Professional Svcs</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Borrower Services</fullName>
            </value>
            <value>
                <fullName>ASA Corportate</fullName>
            </value>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
            <value>
                <fullName>Strategic Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>