force-app/main/default/objects/Campaign/fields/Attend_Next_Year__c.field-meta.xml
<CustomField>
    <fullName>Attend_Next_Year__c</fullName>
    <label>Attend Next Year?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attend</fullName>
            </value>
            <value>
                <fullName>Vend</fullName>
            </value>
            <value>
                <fullName>Present</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>