force-app/main/default/objects/Campaign/fields/Attendee_Population_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Population_Type__c</fullName>
    <label>Attendee Population Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School Students</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Public School Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>