force-app/main/default/objects/Campaign/fields/Banner_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Banner_Received_Date__c</fullName>
    <label>Banner Received Date</label>
    <type>Date</type>
</CustomField>