force-app/main/default/objects/Campaign/fields/Banner_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Banner_Sent_Date__c</fullName>
    <label>Banner Sent Date</label>
    <type>Date</type>
</CustomField>