force-app/main/default/objects/Campaign/fields/BDAttending__c.field-meta.xml
<CustomField>
    <fullName>BDAttending__c</fullName>
    <description>Other Bussinss Development Reps attending the conference</description>
    <label>BD Attending</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alan Ishida</fullName>
            </value>
            <value>
                <fullName>William Fortier</fullName>
            </value>
            <value>
                <fullName>Bob Cole</fullName>
            </value>
            <value>
                <fullName>Brittany Baker</fullName>
            </value>
            <value>
                <fullName>Caroline Menendez</fullName>
            </value>
            <value>
                <fullName>Casey Wallen</fullName>
            </value>
            <value>
                <fullName>Chris Elam</fullName>
            </value>
            <value>
                <fullName>Christian James</fullName>
            </value>
            <value>
                <fullName>Christopher Head</fullName>
            </value>
            <value>
                <fullName>David Snow</fullName>
            </value>
            <value>
                <fullName>Den Chou</fullName>
            </value>
            <value>
                <fullName>Farida Bahadoor</fullName>
            </value>
            <value>
                <fullName>Jay Sweeney</fullName>
            </value>
            <value>
                <fullName>Jill Marr</fullName>
            </value>
            <value>
                <fullName>John Kelly</fullName>
            </value>
            <value>
                <fullName>Julie Esau</fullName>
            </value>
            <value>
                <fullName>Kimberly Gavrilles</fullName>
            </value>
            <value>
                <fullName>Krystal Windley</fullName>
            </value>
            <value>
                <fullName>Mae St. Julien</fullName>
            </value>
            <value>
                <fullName>Michael Friedman</fullName>
            </value>
            <value>
                <fullName>Reis Hagerman</fullName>
            </value>
            <value>
                <fullName>Robert Tosh</fullName>
            </value>
            <value>
                <fullName>Sarah Arslanian</fullName>
            </value>
            <value>
                <fullName>Tanya Tanaro</fullName>
            </value>
            <value>
                <fullName>Tracy Drechsler</fullName>
            </value>
            <value>
                <fullName>Vince Scalise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>