force-app/main/default/objects/Campaign/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <description>The booth identification number for the space to set up exhibit at conference</description>
    <label>Booth Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>