force-app/main/default/objects/Campaign/fields/Booth_Type__c.field-meta.xml
<CustomField>
    <fullName>Booth_Type__c</fullName>
    <description>What type of booth will be at the conference</description>
    <label>Booth Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10 X 10</fullName>
            </value>
            <value>
                <fullName>Customized</fullName>
            </value>
            <value>
                <fullName>N/A Attending Only</fullName>
            </value>
            <value>
                <fullName>Posters</fullName>
            </value>
            <value>
                <fullName>Retractable</fullName>
            </value>
            <value>
                <fullName>Tableclothe</fullName>
            </value>
            <value>
                <fullName>Table Top</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>