force-app/main/default/objects/Campaign/fields/Business_Card_Holder_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Card_Holder_Received_Date__c</fullName>
    <label>Business Card Holder Received Date</label>
    <type>Date</type>
</CustomField>