force-app/main/default/objects/Campaign/fields/Business_Card_Holder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Business_Card_Holder_Sent_Date__c</fullName>
    <label>Business Card Holder Sent Date</label>
    <type>Date</type>
</CustomField>