force-app/main/default/objects/Campaign/fields/Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Certification_Date__c</fullName>
    <label>Certification Date</label>
    <type>Date</type>
</CustomField>