force-app/main/default/objects/Campaign/fields/Collateral_Holder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Holder_Sent_Date__c</fullName>
    <label>Collateral Holder Sent Date</label>
    <type>Date</type>
</CustomField>