force-app/main/default/objects/Campaign/fields/Comp_Registrations__c.field-meta.xml
<CustomField>
    <fullName>Comp_Registrations__c</fullName>
    <description>With the sponsorship level how many Comped (Free) Registations do we get?</description>
    <label># Compt. Registrations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>