force-app/main/default/objects/Campaign/fields/Conference_Chair_s__c.field-meta.xml
<CustomField>
    <fullName>Conference_Chair_s__c</fullName>
    <description>The person to contact regarding Sessions/Booth/Information regarding the Conference, could be mutliple people</description>
    <label>Conference Committee Contact (s)</label>
    <type>TextArea</type>
</CustomField>