force-app/main/default/objects/Campaign/fields/Conference_Website__c.field-meta.xml
<CustomField>
    <fullName>Conference_Website__c</fullName>
    <description>The link to confernence information and/or association url</description>
    <label>Conference Website</label>
    <type>Url</type>
</CustomField>