force-app/main/default/objects/Campaign/fields/Contract_Complete__c.field-meta.xml
<CustomField>
    <fullName>Contract_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Appropriate Contract (s) has been executed Venue, Catering</description>
    <label>Contract(s) Complete</label>
    <type>Checkbox</type>
</CustomField>