force-app/main/default/objects/Campaign/fields/Contract_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Completion_Date__c</fullName>
    <description>Date contract was complete</description>
    <label>Contract Completion Date</label>
    <type>Date</type>
</CustomField>