force-app/main/default/objects/Campaign/fields/CPS_Advisor__c.field-meta.xml
<CustomField>
    <fullName>CPS_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CPS Advisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>startsWith</operation>
            <value>CPS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>