force-app/main/default/objects/Campaign/fields/CPS_Center_Affiliation_Intake_Location__c.field-meta.xml
<CustomField>
    <fullName>CPS_Center_Affiliation_Intake_Location__c</fullName>
    <inlineHelpText>If a new Contact is created from the auto-check-in process (as may be the case for TS), this field is mapped to the Contact Intake Location.</inlineHelpText>
    <label>CPS Center Affiliation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOC Boston</fullName>
            </value>
            <value>
                <fullName>EOC Brockton</fullName>
            </value>
            <value>
                <fullName>TS Boston</fullName>
            </value>
            <value>
                <fullName>TS Brockton</fullName>
            </value>
            <value>
                <fullName>UB Brockton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>