force-app/main/default/objects/Campaign/fields/Estimated_Number_Attending__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_Attending__c</fullName>
    <label>Estimated Number Attending</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>