force-app/main/default/objects/Campaign/fields/Exhibit_Details__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Details__c</fullName>
    <label>Exhibit Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>