force-app/main/default/objects/Campaign/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email Flag</label>
    <type>Checkbox</type>
</CustomField>