force-app/main/default/objects/Campaign/fields/Goal_Academic_Perf_Standard_Tests_UB__c.field-meta.xml
<CustomField>
    <fullName>Goal_Academic_Perf_Standard_Tests_UB__c</fullName>
    <label>Goal % Academic Perf Standard Tests (UB)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>