force-app/main/default/objects/Campaign/fields/Goal_Financial_Aid_App_Completion__c.field-meta.xml
<CustomField>
    <fullName>Goal_Financial_Aid_App_Completion__c</fullName>
    <label>Goal % Financial Aid App Completion</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>