force-app/main/default/objects/Campaign/fields/Goal_N_Funded_to_Serve__c.field-meta.xml
<CustomField>
    <fullName>Goal_N_Funded_to_Serve__c</fullName>
    <label>Goal # Funded to Serve</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>