force-app/main/default/objects/Campaign/fields/Goal_of_low_income_first_generation__c.field-meta.xml
<CustomField>
    <fullName>Goal_of_low_income_first_generation__c</fullName>
    <label>Goal % of low income + first generation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>