force-app/main/default/objects/Campaign/fields/Goal_Post_Secondary_Admission_EOC__c.field-meta.xml
<CustomField>
    <fullName>Goal_Post_Secondary_Admission_EOC__c</fullName>
    <label>Goal % Post Secondary Admission (EOC)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>