force-app/main/default/objects/Campaign/fields/Goal_Post_Secondary_Attainment_6yrs__c.field-meta.xml
<CustomField>
    <fullName>Goal_Post_Secondary_Attainment_6yrs__c</fullName>
    <label>Goal % PostSec Attainment 6yrs (TS)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>