force-app/main/default/objects/Campaign/fields/Goal_Post_Secondary_Completion__c.field-meta.xml
<CustomField>
    <fullName>Goal_Post_Secondary_Completion__c</fullName>
    <label>Goal % PostSec Completion 6yrs (UB)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>