force-app/main/default/objects/Campaign/fields/Goal_Postsecondary_Education_Admission__c.field-meta.xml
<CustomField>
    <fullName>Goal_Postsecondary_Education_Admission__c</fullName>
    <label>Goal % Postsecondary Education Admission</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>