force-app/main/default/objects/Campaign/fields/Goal_Postsecondary_School_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Goal_Postsecondary_School_Enrollment__c</fullName>
    <label>Goal % Postsecondary School Enrollment </label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>