force-app/main/default/objects/Campaign/fields/Goal_Secondary_School_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Goal_Secondary_School_Graduation__c</fullName>
    <label>Goal % Secondary School Graduation</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>