force-app/main/default/objects/Campaign/fields/Goal_Secondary_School_Graduation_Rigor__c.field-meta.xml
<CustomField>
    <fullName>Goal_Secondary_School_Graduation_Rigor__c</fullName>
    <label>Goal % Secondary School Graduation Rigor</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>