force-app/main/default/objects/Campaign/fields/Goal_Secondary_School_Persistence_TS__c.field-meta.xml
<CustomField>
    <fullName>Goal_Secondary_School_Persistence_TS__c</fullName>
    <inlineHelpText>Secondary School Persistence because ___% of non senior students must be promoted to the next grade level.</inlineHelpText>
    <label>Goal % Secondary School Persistence (TS)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>