force-app/main/default/objects/Campaign/fields/Gold_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Gold_Sponsor__c</fullName>
    <description>Who are the Gold Sponsors for the ASA Smposium, can be more than one</description>
    <label>Gold Sponsor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>