force-app/main/default/objects/Campaign/fields/Grant_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Grant_Program_Name__c</fullName>
    <label>Grant Program Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EOC Boston</fullName>
            </value>
            <value>
                <fullName>EOC Brockton</fullName>
            </value>
            <value>
                <fullName>TS Boston</fullName>
            </value>
            <value>
                <fullName>TS Brockton</fullName>
            </value>
            <value>
                <fullName>UB Brockton</fullName>
            </value>
            <value>
                <fullName>EOC MassEdCo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>