force-app/main/default/objects/Campaign/fields/Hosting_Partner__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Partner__c</fullName>
    <inlineHelpText>Hosting Partner (e.g. School) for TS or UB.  Can also be used by EOC where value cannot be found in menu field.</inlineHelpText>
    <label>Hosting Partner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>