force-app/main/default/objects/Campaign/fields/Hosting_Partner_EOC__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Partner_EOC__c</fullName>
    <label>Hosting Partner (EOC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Avon HS</fullName>
            </value>
            <value>
                <fullName>Blue Hills Reg. Tech HS</fullName>
            </value>
            <value>
                <fullName>Braintree Alt. HS</fullName>
            </value>
            <value>
                <fullName>Bridgewater/ Raynham Reg. HS</fullName>
            </value>
            <value>
                <fullName>Brockton Community Resource Center</fullName>
            </value>
            <value>
                <fullName>Brockton Salvation Army</fullName>
            </value>
            <value>
                <fullName>Cardinal Spellman HS- Brockton</fullName>
            </value>
            <value>
                <fullName>Career Works - Brockton</fullName>
            </value>
            <value>
                <fullName>E. Bridgewater HS</fullName>
            </value>
            <value>
                <fullName>Foxboro Regional Charter school</fullName>
            </value>
            <value>
                <fullName>Full Gospel Tabernacle - Brockton</fullName>
            </value>
            <value>
                <fullName>Plymouth North HS</fullName>
            </value>
            <value>
                <fullName>Plymouth Public Library Literacy</fullName>
            </value>
            <value>
                <fullName>Plymouth Salvation Army</fullName>
            </value>
            <value>
                <fullName>Plymouth South HS</fullName>
            </value>
            <value>
                <fullName>Quincy Salvation Army</fullName>
            </value>
            <value>
                <fullName>Randolph HS</fullName>
            </value>
            <value>
                <fullName>Southeastern Reg. Vo. Tech HS</fullName>
            </value>
            <value>
                <fullName>South Shore Charter school</fullName>
            </value>
            <value>
                <fullName>South Shore Voc. Tech. HS</fullName>
            </value>
            <value>
                <fullName>Taunton HS</fullName>
            </value>
            <value>
                <fullName>Teen Challenge</fullName>
            </value>
            <value>
                <fullName>Training Resources of America - Brockton</fullName>
            </value>
            <value>
                <fullName>Training Resources of America - Quincy</fullName>
            </value>
            <value>
                <fullName>Whitman-Hanson Reg. HS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>