force-app/main/default/objects/Campaign/fields/Indirect_Show_Cost__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Show_Cost__c</fullName>
    <label>Indirect Show Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>