force-app/main/default/objects/Campaign/fields/Invitation_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Sent_Date__c</fullName>
    <description>The date the invitations went out from ASA</description>
    <label>Invitation Sent Date</label>
    <type>Date</type>
</CustomField>