force-app/main/default/objects/Campaign/fields/Invoice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent__c</fullName>
    <label>Invoice Sent</label>
    <type>Date</type>
</CustomField>