force-app/main/default/objects/Campaign/fields/iPad_Stand_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>iPad_Stand_Sent_Date__c</fullName>
    <label>iPad Stand Sent Date</label>
    <type>Date</type>
</CustomField>