force-app/main/default/objects/Campaign/fields/Legacy_id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_id__c</fullName>
    <externalId>true</externalId>
    <label>Legacy_id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>