force-app/main/default/objects/Campaign/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>What City State is the conference being help in</description>
    <label>Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>