force-app/main/default/objects/Campaign/fields/Location_Contact__c.field-meta.xml
<CustomField>
    <fullName>Location_Contact__c</fullName>
    <description>Contact for the logistics at the location</description>
    <label>Location Contact</label>
    <length>250</length>
    <type>Text</type>
</CustomField>