force-app/main/default/objects/Campaign/fields/Materials_Sent__c.field-meta.xml
<CustomField>
    <fullName>Materials_Sent__c</fullName>
    <inlineHelpText>Enter the date in which the Materials were sent to the conference/event.</inlineHelpText>
    <label>Materials Sent</label>
    <type>Date</type>
</CustomField>