force-app/main/default/objects/Campaign/fields/Member_Count_for_Validation__c.field-meta.xml
<CustomField>
    <fullName>Member_Count_for_Validation__c</fullName>
    <description>This field is used by a validation rule that prevents a user from deleting a member from a TRIO campaign.</description>
    <label>Member Count for Validation</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>