force-app/main/default/objects/Campaign/fields/Mktg_Banner_Ad_Cost__c.field-meta.xml
<CustomField>
    <fullName>Mktg_Banner_Ad_Cost__c</fullName>
    <label>Mktg Banner Ad Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>