force-app/main/default/objects/Campaign/fields/Name_of_Grantee_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Grantee_Institution__c</fullName>
    <label>Name of Grantee Institution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>