force-app/main/default/objects/Campaign/fields/Name_of_Project_Director__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Project_Director__c</fullName>
    <label>Name of Project Director</label>
    <length>100</length>
    <type>Text</type>
</CustomField>