force-app/main/default/objects/Campaign/fields/Number_of_Attendess__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendess__c</fullName>
    <description>How many people attended the conference</description>
    <label>Number of Attendees</label>
    <length>250</length>
    <type>Text</type>
</CustomField>