force-app/main/default/objects/Campaign/fields/Number_of_Guests__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Guests__c</fullName>
    <description>Number of additional guests</description>
    <label>Number of Guests</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>