force-app/main/default/objects/Campaign/fields/OMB_Approval_Number_Number__c.field-meta.xml
<CustomField>
    <fullName>OMB_Approval_Number_Number__c</fullName>
    <label>OMB Approval Number: Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>