force-app/main/default/objects/Campaign/fields/OMB_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>OMB_Expiration_Date__c</fullName>
    <label>OMB Expiration Date</label>
    <type>Date</type>
</CustomField>