force-app/main/default/objects/Campaign/fields/Participation_Level__c.field-meta.xml
<CustomField>
    <fullName>Participation_Level__c</fullName>
    <label>Participation Level</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>