force-app/main/default/objects/Campaign/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>How much did we pay to vend and/or attend the conference; e.g. Registration Fees?</description>
    <inlineHelpText>How much did we pay to vend and/or attend the conference; e.g. Registration Fees?</inlineHelpText>
    <label>Payment Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>