force-app/main/default/objects/Campaign/fields/Payment_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Payment_Recieved__c</fullName>
    <description>When did we receive payment for the sponsorship Date Field</description>
    <label>Payment Recieved</label>
    <type>Date</type>
</CustomField>