force-app/main/default/objects/Campaign/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <inlineHelpText>Status of payment; e.g Paid by check #58696 or Corp Amex / credit card</inlineHelpText>
    <label>Payment Status</label>
    <length>250</length>
    <type>Text</type>
</CustomField>