force-app/main/default/objects/Campaign/fields/PE_E_Offering__c.field-meta.xml
<CustomField>
    <fullName>PE_E_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PE&amp;E Offering</label>
    <referenceTo>Pro_Services_Offering__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>