force-app/main/default/objects/Campaign/fields/PR_Award_Number__c.field-meta.xml
<CustomField>
    <fullName>PR_Award_Number__c</fullName>
    <label>PR/Award Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>