force-app/main/default/objects/Campaign/fields/Pre_Conf_Registration__c.field-meta.xml
<CustomField>
    <fullName>Pre_Conf_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do we get a pre-conference regigistration list with our Sponsorship level?</description>
    <label>Pre Conf. Registration List?</label>
    <type>Checkbox</type>
</CustomField>